Version 5.3.6 - 5 February 2007, by Pascal "Pixel" Rigaux

- genhdlist2:
  o fix writing utf8 in xml info files (#37482)

Version 5.3.5 - 15 January 2007, by Pascal "Pixel" Rigaux

- genhdlist2:
  o rename --xml-media-info into --xml-info
    (to be coherent with urpmi)

Version 5.3.4 - 18 December 2007, by Pascal "Pixel" Rigaux

- genhdlist2:
  o add --no-hdlist option (to be used by urpmi for --probe-rpms)

Version 5.3.3 - 17 December 2007, by Pascal "Pixel" Rigaux

- genhdlist2:
  o generate {info,changelog,files}.xml.lzma when they already exist, 
    or when --xml-media-info is used
  o error message when parse_hdlist (partially) fail
  o handle old-rpms.lst (to be generated by youri)
    which will allow keeping rpms for some time without having in hdlist
    (useful for installs which expect the pkgs to be in sync in hdlist during
    the full install time)
    it will also allow keeping deprecated packages for some time

Version 5.3.2 - 22 June 2007, by Pascal "Pixel" Rigaux

- genhdlist2:
  o add --allow-empty-media
  o fix MD5SUM generation
  o allow using this script with perl-URPM 1.47 (ie mdv2007.0)
- gendistrib:
  o call genhdlist2 instead of doing things here
  o media/media_info/hdlist_xxx_yyy.cz is now a symlink to media/xxx/yyy/media_info/hdlist.cz
  o synthesis.hdlist_xxx_yyy.cz and pubkey_xxx_yyy are also symlinks now
- parsehdlist:
  o display pkgsize with --all (Christiaan Welvaart)